# VyxalBot2

./: .gitignore  LICENCE  README.md  config.json  docs.md  pyproject.toml
.github/: dependabot.yml
data/: messages.toml  statuses.txt
vyxalbot2/: __init__.py  __main__.py  ato.py  bridge.py  commands.py  reactions.py  replydb.py  types.py  userdb.py  util.py
vyxalbot2/chat/: __init__.py  parser.py  reactions.py
vyxalbot2/clients/: discord.py
vyxalbot2/clients/se/: __init__.py
vyxalbot2/commands/: __init__.py  common.py  discord.py  se.py
vyxalbot2/github/: __init__.py  formatters.py
vyxalbot2/services/: __init__.py  discord.py
vyxalbot2/services/se/: __init__.py  parser.py
