[tool.poetry]
name = "vyxalbot2"
version = "0.1.0"
description = ""
authors = ["GingerIndustries <75683114+gingerindustries@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gidgethub = "^5.2.1"
sechat = { git = "https://github.com/GingerIndustries/sechat.git", branch = "v2" }
cachetools = "^5.3.0"
tomli = "^2.0.1"
tinydb = "^4.7.1"
platformdirs = "^3.5.1"
pyjwt = "^2.7.0"
python-dateutil = "^2.8.2"
websockets = "^10.4"
uwuipy = "^0.1.4"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
