[tool.poetry]
name = "vyxalbot2"
version = "0.1.0"
description = ""
authors = ["GingerIndustries <75683114+gingerindustries@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gidgethub = "^5.2.1"
sechat = { git = "https://github.com/GingerIndustries/sechat.git", branch = "v2" }
cachetools = "^5.5.0"
tomli = "^2.0.1"
pyjwt = "^2.9.0"
python-dateutil = "^2.9.0"
websockets = "^10.4"
pyyaml = "^6.0"
odmantic = "^0.9.2"
blinker = "^1.8.2"
pydantic = "<2.0"
discord-py = "^2.4.0"
bs4 = "^0.0.1"
uwuipy = "^0.1.9"

[tool.poetry.group.dev.dependencies]
black = {version = "^24.1.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
